EZ-1451 code editor add bracket highlighting, better tab handling, optional placeholders and soft wrapping

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -661,6 +661,14 @@ nav.crumb-wrap .breadcrumb:before {
     background-color: #f6f6f6;
 }
 
+.CodeMirror.cm-s-idea .CodeMirror-matchingbracket {
+    outline: 1px solid #cdcdcd;
+}
+
+.CodeMirror.cm-s-idea .CodeMirror-placeholder {
+    color: #777;
+}
+
 
 /** Participants page **/
 
