--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1217,6 +1217,7 @@ textarea.materialize-textarea {
 .modal {
     max-width: 55rem;
     max-height: 80%;
+    overflow-y: inherit;
 }
 
 .modal.fixed-footer.open {
