--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -618,25 +618,25 @@ nav.crumb-wrap .breadcrumb:before {
     border-color: #999;
 }
 
+ez-code-edit-tabs {
+    margin-right: 1rem;
+}
+
 .editor-top .editor-tab {
     margin: 0;
     padding: 0 .75rem;
     border: 1px solid #ccc;
-    -webkit-box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
     box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
 }
 
 .editor-top .editor-tab.active {
     color: #555;
     cursor: default;
-    -webkit-box-shadow: inset 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: inset 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
     box-shadow: inset 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
 }
 
 .editor-top .editor-tab:not(:last-child) {
-    margin-right: 10px;
+    margin-right: 1rem;
 }
 
 .CodeMirror {
